fix: start character exit animation earlier to prevent whatIDO overlap

--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -9,14 +9,14 @@
   width: var(--cWidth);
   max-width: 1920px;
   margin: auto;
-  z-index: 13;
+  z-index: 9;
 }
 .what-box {
   width: 50%;
   display: flex;
   justify-content: center;
   position: relative;
-  z-index: 13;
+  z-index: 9;
 }
 .what-box h2 {
   font-size: calc(4vw + 25px);
